Section 4 Element added
Section 4 of website created

--- a/index.html
+++ b/index.html
@@ -165,10 +165,28 @@
         </div>
         <div class="sec3-halfCircle">
           <div class="sec3-subhead">VENUES</div>
-          <div class="sec3-head">Unforgettable Venues</div>
-          <div class="sec3-para">24 Carrots is the exclusive or preferred caterer at Southern California’s most spectacular properties. From intimate understated spaces to large and luxurious, we’ll help you find the event venue that makes your heart skip a beat.</div>
+          <div class="sec3-head">Unforgettable<br> Venues</div>
+          <div class="sec3-para">24 Carrots is the exclusive or preferred caterer at Southern California’s most<br> spectacular properties. From intimate understated spaces to large and luxurious,<br>
+             we’ll help you find the event venue that makes your heart skip a beat.</div>
           <div class="sec3-btn">EXPLORE MORE <i class="bi bi-arrow-right"></i></div>
           </div>
+      </div>
+      <div class="sec4">
+        <div class="sec4-cont">
+          <div class="sec4-cards owl-carousel owl-theme" id="owl-carousel2">
+            <div class="sec4-card  item">
+              <!-- <div class="sec4-card-img">
+                <img src="./assets/the-richland-tanveer-badal-13.jpg" alt="jg">
+              </div> -->
+              
+              <div class="sec4-card-img-content">
+              <div class="sec4-card-img-btn">EXPLORE VENUE<i class="bi bi-arrow-right"></i></div>
+              <div class="sec4-card-img-head">The Richland</div>
+              <div class="sec4-card-img-subtext">Orange</div>
+            </div>
+            </div>
+          </div>
+        </div>
       </div>
   </body>
 </html>
